# ritlug-discord-bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  database.db
deployments/docker/: Dockerfile
src/: main.rs
src/commands/: bridge.rs  copypasta.rs  help.rs  mod.rs  ping.rs  roles.rs  source.rs  verify.rs
src/database/: auth.rs  avatar.rs  guild.rs  mod.rs  roles.rs
src/irc_bridge/: discord_half.rs  formatting.rs  irc_half.rs  mod.rs
src/smtp/: mod.rs
src/util/: mod.rs
