[package]
name = "ritlug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
dotenv = "0.15"
irc = { version = "0.15", features = ["ctcp", "tls-rust", "tokio-rustls"], default-features = false }
bimap = "0.6"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
