[package]
name = "ritlug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
serde_json = "1.0"
dotenv = "0.15.0"
bimap = "0.6.2"
lazy_static = "1.4"
rand = "0.8.5"
regex = "1.7"
url = "2.3.1"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies.irc]
version = "0.15.0"
features = ["tls-rust", "tokio-rustls"]
default-features = false

[dependencies.lettre]
version = "0.10.1"
features = ["smtp-transport", "tokio1-rustls-tls", "builder"]
default-features = false 

[dependencies.tokio]
version = "1.24"
features = ["macros", "rt-multi-thread"]
